# ChangeLog for sys-apps/calculate-utilities
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-utilities-2.2.24-r10 (30 Sep 2011)

  30 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r10.ebuild:
  Update for templates

*calculate-utilities-2.2.24-r9 (30 Sep 2011)

  30 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r9.ebuild:
  Update for install and templates

*calculate-utilities-2.2.24-r8 (29 Sep 2011)

  29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r8.ebuild:
  Update for templates

*calculate-utilities-2.2.24-r7 (29 Sep 2011)

  29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r7.ebuild:
  Update for revert cache

*calculate-utilities-2.2.24-r6 (28 Sep 2011)

  28 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r6.ebuild:
  Update for templates

*calculate-utilities-2.2.24-r5 (28 Sep 2011)

  28 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r5.ebuild:
  Update for templates lib install i18n desktop builder install-gui

*calculate-utilities-2.2.24-r4 (23 Sep 2011)

  23 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r4.ebuild:
  Update for templates

*calculate-utilities-2.2.24-r3 (21 Sep 2011)

  21 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.24-r3.ebuild:
  Update for lib,install and client

  21 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-utilities-2.2.18.ebuild, -calculate-utilities-2.2.18-r1.ebuild,
  -calculate-utilities-2.2.18-r2.ebuild, -calculate-utilities-2.2.18-r3.ebuild,
  -calculate-utilities-2.2.18-r4.ebuild, -calculate-utilities-2.2.19.ebuild,
  -calculate-utilities-2.2.19-r1.ebuild, -calculate-utilities-2.2.19-r2.ebuild,