@@ -6,6 +6,7 @@ AUX calculate-templates-2.2.24-r5.patch 43300 RMD160 56c136c99d3050c7b32b821d119
 AUX calculate-templates-2.2.24-r7.patch 2641 RMD160 9c8ed19017fb1903f688d60379ca1f08953f432d SHA1 84b5278ee5c2d88938c43caa68a88a00d1431a5d SHA256 2c5de5f7446dc9c22f09b93f091e59dbfea99a5b623390b928aa50d828c82697
 AUX calculate-templates-2.2.24-r8.patch 3799 RMD160 b32dca424fcbcbb4d0461f38603cda9c2c22f095 SHA1 18859fba773368c04ab5d919c761d27459ebfe00 SHA256 c6d8529753d957a902674f39abb3c833496f1bd4b5ccaa49db1b46252636df39
 DIST calculate-templates-2.2.24-r6.tar.bz2 247568 RMD160 df6d8b2cb09c292668528b08382afd563c2e81f7 SHA1 df12ef7a680e76dc13ab2666df8ef84ff4504944 SHA256 b339b318e7dcb5ab045278f0b736fdddd1d5cd53e60c017e73324b7cb23d4d51
+DIST calculate-templates-2.2.24-r9.tar.bz2 248040 RMD160 a4523a32ce2374bb993821f0a7f70d34476ccc69 SHA1 705b710ebbf6110d0aea9c64da4faa4a83208c6d SHA256 87ac54def8fd64491ddaeb613a588393f9670cd6b9c654b90e01deed9c9e1e03
 DIST calculate-templates-2.2.24.tar.bz2 247373 RMD160 eccaa0fb8a02ce6114b9fa24367e5d3ba38b80a4 SHA1 556aa83ce71e2202d9ca66fb6c8b1bc0dfbff44b SHA256 26a3c18c2e18167d4099412e69001cd1f8fd5c2f7165dcd3f24b80701f5d2751
 EBUILD calculate-templates-2.2.24-r1.ebuild 718 RMD160 99d37d439cc2018902fd036acc35d5676a413074 SHA1 d575a81a56ffb19d3f7337d3f20f43da3e3e2c87 SHA256 f765421192ffb1ff987917e4578dd6fa532101841125b43447d69c12eeffb59f
 EBUILD calculate-templates-2.2.24-r2.ebuild 756 RMD160 adf29c1539951953719d5b83be14f590e437fed6 SHA1 de95021a634954babe1fa0ca35181bf1886381d3 SHA256 78b9eec76d49c5328f0d749167c70ca59c8ce1c1756d59b4dbfdfd8c19b78e43
@@ -15,6 +16,7 @@ EBUILD calculate-templates-2.2.24-r5.ebuild 800 RMD160 76ea8a54bbfabe63e76844eb4
 EBUILD calculate-templates-2.2.24-r6.ebuild 585 RMD160 c6b7644ff26907fa64ade9337fdc96b9beee809c SHA1 6f46f29b7443da2a3818daf19e6a889116a0fd6b SHA256 a35a2cbd039aa0676303c5df2ba2b2015ba79b4e8af40ac3abc26f6560345bce
 EBUILD calculate-templates-2.2.24-r7.ebuild 809 RMD160 06ec1787f2f4495f1ff8703abf1a6dbc0f766aed SHA1 76c935dab6cc2abb6661995057efef34d1adf661 SHA256 05d16d7e43bb5cb73c717f8eb5da8ad2b7fc1550139b354259b04b466b55c138
 EBUILD calculate-templates-2.2.24-r8.ebuild 824 RMD160 68a9e89b9805dd598bfaaf4607f4ca3825eaecf1 SHA1 45907c1dba4ff2f9fc4c21b94d2dd709ce5ad919 SHA256 b7a6758c86bd6296b11ebebb5551ac77623028b1f9d5afc3dcf5a6f3b8af8fff
+EBUILD calculate-templates-2.2.24-r9.ebuild 585 RMD160 466d295a7b46d2b7bcac885e82f7199e12237e52 SHA1 713a7bdc0b36efbb23647504febb9f97509f44b7 SHA256 c189f5f5dbbe5b225e582d03a9ac01081ba7cc239080fa22131063bfea825756
 EBUILD calculate-templates-2.2.24.ebuild 582 RMD160 77c74362587b218b15ad9651903420e3ec01962f SHA1 ea9150e2e0476a8d5236f0388e3cdfd1a268bdf7 SHA256 4d0808a6993e403745b7820596d99cb8d2a206b4938f8ea916c1f305c61d2687
 EBUILD calculate-templates-2.2.9999.ebuild 574 RMD160 0898335742573bd029339ae8682b1676cdc6c91c SHA1 d05a1b5986858e35e7f0618a7660ad8e43bbca43 SHA256 c201dbf1dc238f309993c20148918661f057fe406fdb87ed4ef6c3bca0261427
 MISC ChangeLog 34330 RMD160 1e3066cb9accc7425ca4c8c22d0066586125d1b3 SHA1 6a87d41fbe3fd73e9aa575ada35c924497dab1ff SHA256 7c8fa474a3df8a0b1f4d4ed43914be5a1d78c3db5ad1abb2d821db0dad8f6ff0
