@@ -1,5 +1,6 @@
 EBUILD calculate-utilities-2.2.24-r1.ebuild 864 RMD160 a22eb8673a948936e0badbe143b5fedfbfbd8c51 SHA1 0b5d4989ce0937f069e8d99fbb210592f473d8dc SHA256 12b90974f2941a3c49f816bc89075dbb641a16654709baa1ff9ee2fb20815e20
 EBUILD calculate-utilities-2.2.24-r10.ebuild 885 RMD160 7c2dca1a68d899570f495bfe6772973baa02e2a0 SHA1 aa2a994ed2d385624af35c46ff6ee41889100c67 SHA256 4203e4764c30fda8aa3eb5315ab9b63de835374abea65b25f6a003c340871f99
+EBUILD calculate-utilities-2.2.24-r11.ebuild 885 RMD160 64ca1a7435a144d2171fc4b0c3a25d9cee3cdda9 SHA1 39516662c63115e050c3afb3d42129652d8ed3bd SHA256 4a7adef67201f31be09ecdd0342693f55e62f7cfe23cf85e2139eb63547ad05b
 EBUILD calculate-utilities-2.2.24-r2.ebuild 867 RMD160 df598038cc6cc3971cab35ed7984a1dd590bec98 SHA1 a77db53bab42d35ae2677224e3ebc0c26a650a59 SHA256 db8f05e541179081778143f3706c10e42febe96c72fe5a2feceefeff73fd5a50
 EBUILD calculate-utilities-2.2.24-r3.ebuild 873 RMD160 8f0b91ade772b6642311b50efd772daa5a4c76cc SHA1 ad4cfb779ce2a85b9dfe6bc040bff73827fce20b SHA256 3d4ea669782aed05bcc33a16117ef01e22c28585e300b751fb5162a13d990901
 EBUILD calculate-utilities-2.2.24-r4.ebuild 873 RMD160 70f067baed3cd831660617cc2d7a5997712b7fa4 SHA1 a307de135d4ab9526036861ef51f9caa8eef0fd4 SHA256 0024670d48e1510cd2a20f28c623d4f72c9963f66b3f723a5c1e55935362088f
@@ -10,4 +11,4 @@ EBUILD calculate-utilities-2.2.24-r8.ebuild 885 RMD160 fc01b867dd5b79294cdf05819
 EBUILD calculate-utilities-2.2.24-r9.ebuild 885 RMD160 64810ea35986869adff8dd3298607985978e6e59 SHA1 5951c55c53517cb66a87276101aac01c9afcf99f SHA256 7a9c5a4e8710dd651474ec505853102858c44bc7bffb9716d3752924297c610c
 EBUILD calculate-utilities-2.2.24.ebuild 861 RMD160 71a8eac35eade9be90df9cacbb5b4d9ba07d3664 SHA1 258da46af67a0e0995074a9c7f01b33234711ca9 SHA256 f1a33869f243365632a9af11ab9ed2538a6b2c183dd9ddbf28d48ad564df3d54
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 27969 RMD160 37e4d437fef8d4f18658b693d00c9c2285a4c2e2 SHA1 0755529bb725ce5868c319e43aa3e0f63ff1cfb2 SHA256 70ef533649d0fa1886ffa1691c2b295251168d355ea590468b296e7d5c60c785
+MISC ChangeLog 28142 RMD160 4318247692f663323203bc83abf979a1bdeb73aa SHA1 c7e86b9dbbc7e50059fea4b0bd6d6e597f49250f SHA256 37ebe658a8c5282297ddb3f7da1af0634fc23d4dd2423a2b4952c39e73684b62
