@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.24-r11 (30 Sep 2011)
+
+  30 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.24-r11.ebuild:
+  Update for templates
+
 *calculate-utilities-2.2.24-r10 (30 Sep 2011)
 
   30 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
